--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "apexcharts": "^3.35.5",
+    "bootstrap-icons": "^1.9.1",
+    "crypto-ts": "^1.0.2",
+    "ng-apexcharts": "^1.7.1",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-translate-multi-http-loader": "^8.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
